--- a/src/css/gauge.css
+++ b/src/css/gauge.css
@@ -4,13 +4,17 @@ body {
 }
 
 #container {
-	height: 450px;
-	width: 450px;
+	height: 500px;
+	width: 100%;
 	position: absolute;
 	top: 50%;
 	margin-top: -135px;
-	left: 50%;
-	margin-left: -225px;
+	left: 0;
+}
+
+svg {
+    display: block;
+	margin: 0 auto;
 }
 
 .garage .stroke-section {
